* Add banner with links to subscribe * Fix layout on mobile devices

--- a/app/frontend/styles/common.scss
+++ b/app/frontend/styles/common.scss
@@ -8,7 +8,7 @@
 
 h1 {
     font-family: "Libre Franklin", sans-serif;
-    margin-bottom: 40px;
+    margin: 0 0 40px;
 
     a {
         font-size: 14px;
